changes formatting to get better spacing and margins on skills.html and about-me.html fixes image src url in criticalRoll.html

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ body{
     background-repeat: no-repeat;
 }
 
+#landing-bg{
+    background-image: url(/jonbbagby/images/computer.jpg);
+    opacity: 0.75;
+
+}
 .screen-shot{
     max-height: 600px;
     padding: 25px
@@ -39,6 +44,7 @@ a{
 .plain{
     list-style: none;
     padding-bottom: 25px;
+    text-align: center;
 }
 
 .container{
@@ -49,6 +55,7 @@ a{
 
 .icon{
     height: 200px;
+    width: 200px;
     border-radius: 10px;
     
 }
@@ -175,6 +182,9 @@ footer{
     border: black 2px solid
 }
 
+.skills-column p{
+    padding-bottom: 10px;
+}
 /* .project-table > td{
     width: 50%;
     border: black 2px solid
